changed input template

--- a/src/app/formify/components/input/input.component.html
+++ b/src/app/formify/components/input/input.component.html
@@ -1,21 +1,25 @@
 
 <form [formGroup]="inputForm" #form="ngForm">
 
-  <mat-form-field appearance="{{appearance}}"  class="full-width">
+  <mat-form-field [appearance]="appearance"  class="full-width">
 
-    <mat-icon class="icon" *ngIf="icon" [ngClass]="{'error-icon' : control.invalid && form.submitted }"> {{icon}} </mat-icon>
+    <mat-label>{{label}}</mat-label>
 
     <span *ngIf="prefix" matPrefix  (click)="handlePrefix($event)" >
       {{prefix}}
       <mat-icon class="dropDownIconInPrefix" *ngIf="dropDownInPrefix" (click)="handlePrefix($event)">arrow_drop_down</mat-icon>
     </span>
 
-    <input matInput formControlName="control" (input)="emitValue()"  [errorStateMatcher]="errorStateMatcher" [type]="type" [placeholder]="label | translate" >
+    <input matInput formControlName="control" (input)="emitValue()"  [errorStateMatcher]="errorStateMatcher" [type]="type" [placeholder]="placeholder" >
 
+    <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && form.submitted }">{{icon}}</mat-icon>
+
+    <mat-hint *ngIf="hint">Hint</mat-hint>
+<!--    [placeholder]="label | translate"-->
     <mat-error *ngIf="control.invalid && form.submitted">
             <span *ngFor="let error of errors(control)">
                 <ng-container *ngIf="useTranslation">
-                    {{error.translationCode | translate: error.parameters}}
+<!--                    {{error.translationCode | translate: error.parameters}}-->
                 </ng-container>
                 <ng-container *ngIf="!useTranslation">
                     {{error.description}}
