--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,7 +75,19 @@
 
   <!-- Terminal -->
 
+  <div>
+    <form [formGroup]="formify.formGroup" #form="ngForm">
+      <formify-input [formControl]="formify.getControl('name').formControl" [fieldModel]="formify.getControl('name')" ></formify-input>
+      <formify-submit [formifyModel]="formify" [ngForm]="form"></formify-submit>
+    </form>
+  </div>
 
+  <mat-form-field appearance="outline">
+    <mat-label>Outline form field</mat-label>
+    <input matInput placeholder="Placeholder">
+    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    <mat-hint>Hint</mat-hint>
+  </mat-form-field>
   <!-- Links -->
   <div class="card-container">
     <a class="circle-link" title="Join the repository on github" href="https://discord.gg/angular" target="_blank" rel="noopener">
