--- a/src/app/formify/components/submit/submit.component.html
+++ b/src/app/formify/components/submit/submit.component.html
@@ -1,7 +1,8 @@
 
 <p>
   <button (click)="onSubmit()" [disabled]="formifyModel.formGroup.invalid && ngForm.submitted || formifyModel.loading" mat-raised-button class="submit" color="{{color}}" >
-    <span *ngIf="!formifyModel.loading; else loading_spinner_login" [translate]="formifyModel.submit.text" ></span>
+<!--    <span *ngIf="!formifyModel.loading; else loading_spinner_login" [translate]="formifyModel.submit.text" ></span>-->
+    <span> Submit</span>
     <ng-template #loading_spinner_login>
       <mat-icon class="icon_button_login">
         <mat-spinner [diameter]="30"  class="loading center"></mat-spinner>
