--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
 
   <div>
     <form [formGroup]="formify.formGroup" #form="ngForm">
-      <formify-input [formControl]="formify.getControl('name').formControl" [fieldModel]="formify.getControl('name')" ></formify-input>
+      <formify-input [formControl]="formify.getControl('name').formControl" [fieldModel]="formify.getControl('name')" [submitted]="form.submitted"></formify-input>
       <formify-submit [formifyModel]="formify" [ngForm]="form"></formify-submit>
     </form>
   </div>
