--- a/src/app/formify/components/input/input.component.html
+++ b/src/app/formify/components/input/input.component.html
@@ -1,26 +1,20 @@
 
-<form [formGroup]="inputForm" #form="ngForm" autocomplete="{{autoComplete}}">
+<form [formGroup]="inputForm" #form="ngForm" [autocomplete]="autoComplete">
   <mat-form-field [appearance]="appearance"  class="full-width">
-    <mat-label>{{label}}</mat-label>
+    <mat-label>{{(!useTranslation) ? label : label | translate}}</mat-label>
     <span *ngIf="prefix" matPrefix  (click)="handlePrefix($event)" >
       {{prefix}}
       <mat-icon class="dropDownIconInPrefix" *ngIf="dropDownInPrefix" (click)="handlePrefix($event)">arrow_drop_down</mat-icon>
       &nbsp
     </span>
-    <input matInput formControlName="control" (input)="emitValue()" [errorStateMatcher]="errorStateMatcher" [type]="type" [placeholder]="placeholder" >
+    <input matInput formControlName="control" (input)="emitValue()" [errorStateMatcher]="errorStateMatcher" [type]="type" [placeholder]="(!useTranslation) ? placeholder : placeholder | translate">
     <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && submitted | async }">{{icon}}</mat-icon>
-    <mat-hint *ngIf="hint">{{hint}}</mat-hint>
-<!--    [placeholder]="label | translate"-->
+    <mat-hint *ngIf="hint">{{(!useTranslation) ? hint : hint | translate}}</mat-hint>
     <mat-error *ngIf="control.invalid && submitted | async">
-            <span *ngFor="let error of errors(control)">
-                <ng-container *ngIf="useTranslation">
-                    {{error.translationCode | translate: error.parameters}}
-                </ng-container>
-                <ng-container *ngIf="!useTranslation">
-                    {{error.description}}
-                </ng-container>
-            </span>
+      <span *ngFor="let error of errors(control)">
+        {{(!useTranslation) ? error.description : error.translationCode | translate: error.parameters}}
+      </span>
     </mat-error>
   </mat-form-field>
-  <button #submit style="display: none" ></button>
+  <button hidden #submit></button>
 </form>
