--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,6 +78,7 @@
   <div>
     <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
       <formify-input formControlName="name" [fieldModel]="formify.getControl('name')"></formify-input>
+      <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>
       <formify-submit [submit]="formify.submit"></formify-submit>
     </form>
   </div>
