--- a/src/app/formify/components/input/input.component.html
+++ b/src/app/formify/components/input/input.component.html
@@ -1,5 +1,4 @@
-
-<form [formGroup]="inputForm" #form="ngForm" [autocomplete]="autoComplete">
+<form [formGroup]="formGroup" #form="ngForm" [autocomplete]="autoComplete">
   <mat-form-field [appearance]="appearance"  class="full-width">
     <mat-label>{{(!useTranslation) ? label : label | translate}}</mat-label>
     <span *ngIf="prefix" matPrefix  (click)="handlePrefix($event)" >
@@ -7,7 +6,9 @@
       <mat-icon class="dropDownIconInPrefix" *ngIf="dropDownInPrefix" (click)="handlePrefix($event)">arrow_drop_down</mat-icon>
       &nbsp
     </span>
-    <input matInput formControlName="control" (input)="emitValue()" [errorStateMatcher]="errorStateMatcher" [type]="type" [placeholder]="(!useTranslation) ? placeholder : placeholder | translate">
+    <label>
+      <input matInput formControlName="control" (input)="emitValue()" [errorStateMatcher]="errorStateMatcher" [type]="type" [placeholder]="(!useTranslation) ? placeholder : placeholder | translate">
+    </label>
     <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && submitted | async }">{{icon}}</mat-icon>
     <mat-hint *ngIf="hint">{{(!useTranslation) ? hint : hint | translate}}</mat-hint>
     <mat-error *ngIf="control.invalid && submitted | async">
@@ -18,3 +19,5 @@
   </mat-form-field>
   <button hidden #submit></button>
 </form>
+
+
