--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,7 @@
       <formify-input formControlName="name" [fieldModel]="formify.getControl('name')"></formify-input>
       <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>
       <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>
+      <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>
       <formify-submit [submit]="formify.submit"></formify-submit>
     </form>
   </div>
