max width and media screen from container

--- a/src/app/formify/components/radio/radio.component.html
+++ b/src/app/formify/components/radio/radio.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="formGroup" #form="ngForm" [autocomplete]="autoComplete">
-  <mat-label>{{(!useTranslation) ? label : label | translate}}</mat-label>
+  <mat-label class="label">{{(!useTranslation) ? label : label | translate}}:</mat-label>
   <mat-radio-group formControlName="control" (change)="emitValue()">
     <mat-radio-button *ngFor="let option of options" class="radio-button" [value]="option.value">
       {{option.text}}
