--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,18 +30,21 @@
       <span>Third Example</span>
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
     </a>
+    <div class="form">
+      <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
+        <formify-input formControlName="name" [fieldModel]="formify.getControl('name')"></formify-input>
+        <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>
+        <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>
+        <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>
+        <formify-radio formControlName="color" [fieldModel]="formify.getControl('color')"></formify-radio>
+        <formify-submit [submit]="formify.submit"></formify-submit>
+      </form>
+    </div>
   </div>
   <!-- Next Steps -->
   <input type="hidden" #selection>
   <!-- Terminal -->
-  <div>
-    <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
-      <formify-input formControlName="name" [fieldModel]="formify.getControl('name')"></formify-input>
-      <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>
-      <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>
-      <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>
-      <formify-submit [submit]="formify.submit"></formify-submit>
-    </form>
+  <div class="card-container">
   </div>
   <!-- Links -->
   <div class="card-container">
