--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -261,6 +261,10 @@ svg#clouds {
   z-index: -10;
   width: 1920px;
 }
+.form{
+  width: 500px;
+  max-width: 500px;
+}
 
 
 /* Responsive Styles */
@@ -269,6 +273,10 @@ svg#clouds {
   .card-container > *:not(.circle-link) ,
   .terminal {
     width: 100%;
+  }
+  .form{
+    width: 100%;
+    max-width: 100%;
   }
 
   .card:not(.highlight-card) {
