--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -124,7 +124,7 @@ svg.material-icons:not(:last-child) {
 }
 
 .card.highlight-card {
-  background-color: #1976d2;
+  background-color: #673ab7;
   color: white;
   font-weight: 600;
   border: none;
