--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,10 @@
         <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>
         <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>
         <formify-radio formControlName="color" [fieldModel]="formify.getControl('color')"></formify-radio>
-        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.getControl('checkbox')"></formify-checkbox>
+<!--        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.getControl('checkbox')"></formify-checkbox>-->
+
+        <formify-checkbox formArrayName="checkboxes" [fieldModel]="formify.getControl('checkboxes')"></formify-checkbox>
+
         <formify-submit [submit]="formify.submit"></formify-submit>
       </form>
     </div>
