--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,11 +33,11 @@
     <div class="form">
       <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
         <formify-input formControlName="name" [fieldModel]="formify.getControl('name')"></formify-input>
-<!--        <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>-->
-<!--        <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>-->
-<!--        <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>-->
-<!--        <formify-radio formControlName="color" [fieldModel]="formify.getControl('color')"></formify-radio>-->
-<!--        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.getControl('checkbox')"></formify-checkbox>-->
+        <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>
+        <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>
+        <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>
+        <formify-radio formControlName="color" [fieldModel]="formify.getControl('color')"></formify-radio>
+        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.getControl('checkbox')"></formify-checkbox>
 
 <!--        <formify-checkbox formArrayName="checkboxes" [fieldModel]="formify.getControl('checkboxes')"></formify-checkbox>-->
 
