--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,12 +32,12 @@
     </a>
     <div class="form">
       <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
-        <formify-input formControlName="name" [fieldModel]="formify.getControl('name')"></formify-input>
-        <formify-select formControlName="language" [fieldModel]="formify.getControl('language')"></formify-select>
-        <formify-textarea formControlName="describe" [fieldModel]="formify.getControl('describe')"></formify-textarea>
-        <formify-toggle formControlName="toggle" [fieldModel]="formify.getControl('toggle')"></formify-toggle>
-        <formify-radio formControlName="color" [fieldModel]="formify.getControl('color')"></formify-radio>
-        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.getControl('checkbox')"></formify-checkbox>
+        <formify-input formControlName="name" [control]="formify.getControl('name')"></formify-input>
+        <formify-select formControlName="language" [control]="formify.getControl('language')"></formify-select>
+        <formify-textarea formControlName="describe" [control]="formify.getControl('describe')"></formify-textarea>
+        <formify-toggle formControlName="toggle" [control]="formify.getControl('toggle')"></formify-toggle>
+        <formify-radio formControlName="color" [control]="formify.getControl('color')"></formify-radio>
+        <formify-checkbox formControlName="checkbox" [control]="formify.getControl('checkbox')"></formify-checkbox>
 
 <!--        <formify-checkbox formArrayName="checkboxes" [fieldModel]="formify.getControl('checkboxes')"></formify-checkbox>-->
 
