--- a/src/app/formify/components/array-control/array-control.component.html
+++ b/src/app/formify/components/array-control/array-control.component.html
@@ -1,1 +1,12 @@
-<p>array-control works!</p>
+
+
+<form [formGroup]="formGroup" #form="ngForm">
+
+  <div [formArrayName]="arrayModel.controlName" *ngFor="let item of formArray['controls']; let i = index;">
+    <div [formGroupName]="i">
+     <input formControlName="phone" (input)="emitValue()">
+     <input formControlName="address" (input)="emitValue()">
+    </div>
+  </div>
+  <button hidden #submit></button>
+</form>
