--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,7 @@
         <formify-toggle formControlName="toggle" [fieldModel]="formify.get('toggle')"></formify-toggle>
         <formify-radio formControlName="color" [fieldModel]="formify.get('color')"></formify-radio>
         <formify-array-control [arrayModel]="formify.getArray('array')"></formify-array-control>
+        <formify-group-control [groupModel]="formify.getGroup('contact')"></formify-group-control>
 <!--        <div formGroupName="contact">-->
 <!--          <formify-input formControlName="phone" [fieldModel]="formify.get('contact.phone')"></formify-input>-->
 <!--        </div>-->
