--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,19 +32,16 @@
     </a>
     <div class="form">
       <form [formGroup]="formify.formGroup" #form="ngForm" (ngSubmit)="onSubmit()">
-        <formify-input formControlName="name" [fieldModel]="formify.get('name')"></formify-input>
-        <formify-select formControlName="language" [fieldModel]="formify.get('language')"></formify-select>
-        <formify-textarea formControlName="describe" [fieldModel]="formify.get('describe')"></formify-textarea>
-        <formify-toggle formControlName="toggle" [fieldModel]="formify.get('toggle')"></formify-toggle>
-        <formify-radio formControlName="color" [fieldModel]="formify.get('color')"></formify-radio>
-        <formify-array-control [arrayModel]="formify.getArray('array')"></formify-array-control>
-        <formify-group #group formGroupName="contact" [groupModel]="formify.getGroup('contact')">
-          <formify-input formControlName="phone" [fieldModel]="group.groupModel.get('phone')"></formify-input>
-          <formify-input formControlName="address" [fieldModel]="group.groupModel.get('address')"></formify-input>
+        <formify-input formControlName="name" [fieldModel]="formify.field('name')"></formify-input>
+        <formify-select formControlName="language" [fieldModel]="formify.field('language')"></formify-select>
+        <formify-textarea formControlName="describe" [fieldModel]="formify.field('describe')"></formify-textarea>
+        <formify-toggle formControlName="toggle" [fieldModel]="formify.field('toggle')"></formify-toggle>
+        <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
+        <formify-array-control [arrayModel]="formify.array('array')"></formify-array-control>
+        <formify-group #group formGroupName="contact" [groupModel]="formify.group('contact')">
+          <formify-input formControlName="phone" [fieldModel]="group.groupModel.field('phone')"></formify-input>
+          <formify-input formControlName="address" [fieldModel]="group.groupModel.field('address')"></formify-input>
         </formify-group>
-<!--        <div formGroupName="contact">-->
-<!--          <formify-input formControlName="phone" [fieldModel]="formify.get('contact.phone')"></formify-input>-->
-<!--        </div>-->
         <formify-submit [submit]="formify.submit"></formify-submit>
       </form>
     </div>
