add multiple items in array

--- a/src/app/formify/components/group-control/group-control.component.html
+++ b/src/app/formify/components/group-control/group-control.component.html
@@ -1,6 +1,6 @@
 
 <form [formGroup]="formGroup" #form="ngForm">
-
+<a href="javascript:" (click)="addfield()">add field</a>
 <!--  <input formControlName="phone">-->
 <!--  <input formControlName="address">-->
 
