--- a/src/app/formify/components/array-control/array-control.component.html
+++ b/src/app/formify/components/array-control/array-control.component.html
@@ -1,14 +1,5 @@
 
-
 <form [formGroup]="formGroup" #form="ngForm">
-  <a href="javascript:" (click)="addGroup()"> Add group </a>
-  <div [formArrayName]="arrayModel.controlName" *ngFor="let item of arrayModel['controls']; let i = index;">
-    <div [formGroupName]="i" style="display: flex;">
-      <formify-input formControlName="phone" [fieldModel]="item.field('phone')"></formify-input>
-      <formify-input formControlName="address" [fieldModel]="item.field('address')"></formify-input>
-<!--     <input formControlName="phone">-->
-<!--     <input formControlName="address">-->
-    </div>
-  </div>
+  <ng-content></ng-content>
   <button hidden #submit></button>
 </form>
