--- a/src/app/formify/components/field-control/field-control.component.html
+++ b/src/app/formify/components/field-control/field-control.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="formGroup" #form="ngForm">
+<form [formGroup]="formGroup" #form="ngForm" *ngIf="fieldModel && !hidden">
   <ng-content></ng-content>
   <button hidden #submit></button>
 </form>
