--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,18 +38,18 @@
         <formify-toggle formControlName="toggle" [fieldModel]="formify.field('toggle')"></formify-toggle>
         <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
 
-        <formify-array #array [arrayModel]="formify.array('array')">
-          <div [formArrayName]="array.arrayModel.controlName" *ngFor="let item of array.arrayModel['controls']; let i = index;">
-          <formify-group [formGroupName]="i" [groupModel]="item">
-            <div style="display: flex;">
-              <formify-input formControlName="phone" [fieldModel]="item.field('phone')"></formify-input>
-              <formify-input formControlName="address" [fieldModel]="item.field('address')"></formify-input>
-            </div>
-          </formify-group>
-          </div>
-        </formify-array>
+<!--        <formify-array #array [arrayModel]="formify.array('array')">-->
+<!--          <div [formArrayName]="array.arrayModel.controlName" *ngFor="let item of array.arrayModel['controls']; let i = index;">-->
+<!--          <formify-group [formGroupName]="i" [groupModel]="item">-->
+<!--            <div style="display: flex;">-->
+<!--              <formify-input formControlName="phone" [fieldModel]="item.field('phone')"></formify-input>-->
+<!--              <formify-input formControlName="address" [fieldModel]="item.field('address')"></formify-input>-->
+<!--            </div>-->
+<!--          </formify-group>-->
+<!--          </div>-->
+<!--        </formify-array>-->
 
-<!--        <formify-address formArrayName="array" [arrayModel]="formify.array('array')"></formify-address>-->
+        <formify-address formArrayName="array" [arrayModel]="formify.array('array')"></formify-address>
 
         <formify-group #group formGroupName="contact" [groupModel]="formify.group('contact')">
           <formify-input formControlName="phone" [fieldModel]="group.groupModel.field('phone')"></formify-input>
