--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -83,15 +83,16 @@ svg.material-icons:not(:last-child) {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 16px;
+  width: 100%;
 }
 
 .card {
   border-radius: 4px;
   border: 1px solid #eee;
   background-color: #fafafa;
-  height: 40px;
+  //height: 40px;
   width: 200px;
-  margin: 0 8px 16px;
+  margin: 5px ;
   padding: 16px;
   display: flex;
   flex-direction: row;
@@ -102,7 +103,6 @@ svg.material-icons:not(:last-child) {
 }
 
 .card-container .card:not(:last-child) {
-  margin-right: 0;
 }
 
 .card.card-small {
@@ -128,8 +128,9 @@ svg.material-icons:not(:last-child) {
   color: white;
   font-weight: 600;
   border: none;
-  width: auto;
-  min-width: 30%;
+  //width: auto;
+  //min-width: 30%;
+  width: 200px;
   position: relative;
 }
 
@@ -142,13 +143,15 @@ svg#rocket {
   position: absolute;
   left: -10px;
   top: -24px;
+  transform: rotate(15deg);
 }
 
 svg#rocket-smoke {
-  height: calc(100vh - 95px);
+  //height: calc(100vh - 95px);
   position: absolute;
   top: 10px;
-  right: 180px;
+  //right: 250px;
+  margin-left: -600px;
   z-index: -10;
 }
 
@@ -262,8 +265,8 @@ svg#clouds {
   width: 1920px;
 }
 .form{
-  width: 500px;
-  max-width: 500px;
+  //width: 500px;
+  max-width: 722px;
 }
 
 
@@ -288,15 +291,15 @@ svg#clouds {
     margin-left: 72px;
   }
 
-  svg#rocket-smoke {
-    right: 120px;
-    transform: rotate(-5deg);
-  }
+  //svg#rocket-smoke {
+  //  right: 120px;
+  //  transform: rotate(-5deg);
+  //}
 }
 
 @media screen and (max-width: 575px) {
-  svg#rocket-smoke {
-    display: none;
-    visibility: hidden;
-  }
+  //svg#rocket-smoke {
+  //  display: none;
+  //  visibility: hidden;
+  //}
 }
