--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,9 @@
         <formify-textarea formControlName="biography" [fieldModel]="formify.field('biography')"></formify-textarea>
         <formify-toggle formControlName="toggle" [fieldModel]="formify.field('toggle')"></formify-toggle>
         <formify-radio formControlName="color" [fieldModel]="formify.field('color')"></formify-radio>
+        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.field('checkbox')"> </formify-checkbox>
 
+<!--        <formify-input formControlName="checkbox" [fieldModel]="formify.field('checkbox')"></formify-input>-->
 <!--        <formify-array #array [arrayModel]="formify.array('array')">-->
 <!--          <div [formArrayName]="array.arrayModel.controlName" *ngFor="let item of array.arrayModel['controls']; let i = index;">-->
 <!--          <formify-group [formGroupName]="i" [groupModel]="item">-->
