--- a/src/app/formify/components/checkbox/checkbox.component.html
+++ b/src/app/formify/components/checkbox/checkbox.component.html
@@ -1,10 +1,8 @@
 
 <form [formGroup]="formGroup" #form="ngForm" [autocomplete]="autoComplete" *ngIf="fieldModel && !hidden">
-  <div class="checkbox-content">
-      <mat-checkbox formControlName="control" [color]="color" (ngModelChange)="emitValue()">
-            <mat-label>{{(!useTranslation) ? label : label | translate}}</mat-label>
-      </mat-checkbox>
-    <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && submitted | async }">{{icon}}</mat-icon>
-  </div>
+  <mat-checkbox class="checkbox" formControlName="control" [color]="color" (change)="emitValue()">
+    <mat-label>{{(!useTranslation) ? label : label | translate}}</mat-label>
+  </mat-checkbox>
+  <mat-icon *ngIf="icon" matSuffix [ngClass]="{'error-icon' : control.invalid && submitted | async }">{{icon}}</mat-icon>
   <button hidden #submit></button>
 </form>
