create exercises group custom component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,13 +40,6 @@
 <!--        <formify-checkbox formControlName="checkbox" [fieldModel]="formify.field('checkbox')"> </formify-checkbox>-->
 <!--        <formify-input formControlName="add-exercise" (keypress)="onKeyPressAddExercise($event)" [fieldModel]="formify.field('add-exercise')"></formify-input>-->
 
-        <formify-group formGroupName="exercises" #checkboxes [groupModel]="formify.group('exercises')">
-
-          <div style="display: flex; flex-wrap: wrap">
-            <formify-checkbox *ngFor="let check of checkboxes.groupModel.controls" [formControlName]="check.controlName" [fieldModel]="check"></formify-checkbox>
-          </div>
-
-        </formify-group>
 
 <!--        <formify-input formControlName="checkbox" [fieldModel]="formify.field('checkbox')"></formify-input>-->
 <!--        <formify-array #array [arrayModel]="formify.array('array')">-->
@@ -59,6 +52,8 @@
 <!--          </formify-group>-->
 <!--          </div>-->
 <!--        </formify-array>-->
+
+        <formify-exercises  [groupModel]="formify.group('exercises')"></formify-exercises>
 
         <formify-address formArrayName="array" [arrayModel]="formify.array('array')"></formify-address>
 
